crates/nash-codegen/src/snapshots/nash_codegen__dead_recursive_tests__unused_cycle.snap
---
source: crates/nash-codegen/src/dead_recursive_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
letrec
  f#1 : int -> int [static []] = \x#3 : int -> g#2 x#3
  g#2 : int -> int [static []] = \y#4 : int -> f#1 y#4
in
trace "continuation" in 42
--- core after
trace "continuation" in 42
--- uplc before
(program 1.1.0
  [(lam dispatch_7
    [(lam f_1
      [(lam g_2
        (force
          [[(force (builtin trace)) (con string "continuation")] (delay (con integer 42))]))
        (lam y_15 [dispatch_7 (constr 1 dispatch_7 y_15)])])
      (lam x_16 [dispatch_7 (constr 0 dispatch_7 x_16)])])
    (lam request_8
      (case
        request_8
        (lam self_9 (lam x_3 [self_9 (constr 1 self_9 x_3)]))
        (lam self_12 (lam y_4 [self_12 (constr 0 self_12 y_4)]))))])
--- uplc after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "continuation")] (delay (con integer 42))]))
--- result
(con integer 42)
--- logs
["continuation"]
