crates/nash-codegen/src/snapshots/nash_codegen__dead_recursive_tests__unused_failure.snap
---
source: crates/nash-codegen/src/dead_recursive_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
letrec
  f#1 : int -> int [static []] = \x#3 : int -> error
in
42
--- core after
42
--- uplc before
(program 1.1.0
  [(lam f_1 (con integer 42))
    [(lam self_17 [self_17 self_17]) (lam self_17 (lam x_3 (error)))]])
--- uplc after
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
